[project]
name = "forkserver"
version = "0.1.2"
description="A pytest plugin for forkserver functionality."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["watchdog"]
classifiers = [
    "Framework :: Pytest",
]

[project.scripts]
forkserver = "forkserver.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["forkserver"]