[project]
name = "flask-example"
version = "0.1.0"
description = "Toy example that can be used to test `forkserver` functionality."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "flask-example",
    "forkserver>=0.1.2",
    "pytest>=8.3.4",
]
